# sage

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE-APACHE  README.md
docs/plans/: 01-language-identity.md  02-syntax-design.md  03-concurrency-model.md  04-memory-model.md  05-ai-mcp-integration.md  06-compiler-architecture.md  07-design-summary.md
examples/: hello.sg
src/: lib.rs  main.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/runtime/: mod.rs
src/typechecker/: mod.rs
tests/: cli_test.rs  lexer_test.rs  parser_test.rs
